--- a/src/exercise/03.extra-2.html
+++ b/src/exercise/03.extra-2.html
@@ -12,8 +12,11 @@
   -->
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
   <script type="text/babel">
-
-    const element = <div className="container">Hello World</div>
+    const className = 'container'
+    const children = 'Hello World'
+    const props = {className, children}
+    // const element = React.createElement('div', {id: 'id1', ...props})
+    const element = <div {...props}/>
     ReactDOM.createRoot(document.getElementById('root')).render(element)
   </script>
 </body>
