--- a/src/exercise/04-extra-4.html
+++ b/src/exercise/04-extra-4.html
@@ -10,25 +10,23 @@
   <script type="text/babel">
     // 🐨 Make a function called `message` which returns the JSX we want to share
     function Message({subject, greeting}) {
-      return (
-        <div className="message">
-          {greeting}, {subject}
+      return <div className="message">
+        {greeting}, {subject}
         </div>
-      )
     }
 
     Message.propTypes = {
       subject: PropTypes.string.isRequired,
-      greeting: PropTypes.string.isRequired,
+      greeting: PropTypes.string.isRequired
     }
-
+    
     // 🐨 use that function in place of the divs below with:
     // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
     const element = (
-      <>
-        <Message greeting ="Hello" subject="World" />
-        <Message greeting="Goodbye" subject="World" />
-      </>
+      <div className="container">
+        <Message subject="World" />
+        <Message greeting="Goodbye" subject={5} />
+      </div>
     )
 
     // 💯 This is only the first step to making actual React components. The rest is in the extra credit!
